vectorizer.ipynb added

--- a/src/cola/cola.ipynb
+++ b/src/cola/cola.ipynb
@@ -292,7 +292,7 @@
         "id": "ACJwmh42eFqT"
       },
       "source": [
-        "def encode(sentences: list,\n",
+        "def tokenize(sentences: list,\n",
         "           tokenizer: BertTokenizer,\n",
         "           max_length: int) -> tuple:\n",
         "    \"\"\"\n",
@@ -552,8 +552,8 @@
         "schedulerFactory = getSchedulerFactory(optimizer)  # learner can be called with different values of n_epoch\n",
         "steps_per_epoch = int(len(sentences) * split_factor / batch_size) + 1\n",
         "\n",
-        "# encode sentences to token ids and attention masks\n",
-        "token_ids, attention_masks = encode(sentences, tokenizer, max_length)\n",
+        "# tokenize sentences to token ids and attention masks\n",
+        "token_ids, attention_masks = tokenize(sentences, tokenizer, max_length)\n",
         "\n",
         "# put token ids, attention masks and labels into a dataloader\n",
         "train_dataloader, test_dataloader = \\\n",
