plot history, showMetrics, showConfusionMatrix added

--- a/src/cola/vectorizer.ipynb
+++ b/src/cola/vectorizer.ipynb
@@ -8,6 +8,9 @@
    },
    "outputs": [],
    "source": [
+    "# uncomment this if import fails\n",
+    "# !pip install transformers\n",
+    "\n",
     "import torch\n",
     "from scipy.spatial.distance import cosine\n",
     "from torch import Tensor\n",
