--- a/src/basics/aufgabe_01.ipynb
+++ b/src/basics/aufgabe_01.ipynb
@@ -57,8 +57,82 @@
     "        return history\n",
     "\n",
     "    def predict(self, X):\n",
-    "        return self.pred_fct(self.M(X))"
+    "        return self.pred_fct(self.M(X))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Perceptron with sklearn"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# X = Input (4 x 2)\n",
+    "# Y = Output  (4 x 1)\n",
+    "from sklearn.linear_model import Perceptron\n",
+    "\n",
+    "def perceptron1(x, y, *z):\n",
+    "\n",
+    "    X = tensor(x, dtype=float32).view(-1, 2)\n",
+    "    Y = tensor(y, dtype=torch.float32).view(-1, 1)\n",
+    "    M = Perceptron(random_state=0)\n",
+    "\n",
+    "    return M, X, Y\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Perceptron with Pytorch"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# X = Input (4 x 2)\n",
+    "# Y = Output  (4 x 1)\n",
+    "\n",
+    "def perceptron2(x, y, lr, n_epoch):\n",
+    "\n",
+    "    X = tensor(x, requires_grad=True, dtype=float32).view(-1, 2)\n",
+    "    Y = tensor(y, dtype=torch.float32).view(-1, 1)\n",
+    "    M = nn.Sequential(nn.Linear(2, 1), nn.Threshold(0, 1))\n",
+    "\n",
+    "    # d = {'0.weight': torch.tensor([[1., 1.]]),\n",
+    "    #      '0.bias': torch.tensor([0.0])}\n",
+    "    # M.load_state_dict(d)\n",
+    "\n",
+    "    optimizer = optim.SGD(M.parameters(), lr=lr)\n",
+    "    loss_fct = nn.MSELoss()\n",
+    "    # pred = Y rounded to nearest integer with gradient removed (detach)\n",
+    "    pred_fct = lambda Y: torch.round(Y).detach()\n",
+    "\n",
+    "    return Learner(M, optimizer, loss_fct, pred_fct, n_epoch), X, Y"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
